; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_posix_sem.c_mac_posixsem_check_wait.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_posix_sem.c_mac_posixsem_check_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pseminfo = type { i32 }

@posixsem_check_wait = common dso_local global i32 0, align 4
@mac_posixsem_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_posixsem_check_wait(i32 %0, %struct.pseminfo* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pseminfo*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.pseminfo* %1, %struct.pseminfo** %4, align 8
  %6 = load i32, i32* @posixsem_check_wait, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.pseminfo*, %struct.pseminfo** %4, align 8
  %9 = load %struct.pseminfo*, %struct.pseminfo** %4, align 8
  %10 = getelementptr inbounds %struct.pseminfo, %struct.pseminfo* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @MAC_CHECK(i32 %6, i32 %7, %struct.pseminfo* %8, i32 %11)
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.pseminfo*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
